@@ -2,6 +2,7 @@ Version 3.1.0   unreleased
 
     * Add ViewDataUtils.fillLabel().
     * Enhance ViewDataUtils to accept comma-deliminated lists in string fields.
+    * Enhance TabLayoutPanel and ModuleTab view to allow replacing arbitrary tabs.
 
 Version 3.0.0   16 Nov 2013
 
